--- a/InterviewMe.Web/Scripts/react-temp/src/assets/css/main.css
+++ b/InterviewMe.Web/Scripts/react-temp/src/assets/css/main.css
@@ -1,4 +1,19 @@
 * {
+    margin: 0;
+    padding: 0;
     font-family: 'Work Sans', sans-serif;
-    color: black;
+    color:#17252A;
+}
+.shadow-the-back {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
+}
+.shadow-the-back-sm {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 8px 0 rgba(0, 0, 0, 0.19); 
+    border-radius: 5px; 
+}
+.theme-color-1 {
+    color:#17252A;
+}
+.theme-color-2 {
+    color: #3AAFA9;
 }
