--- a/InterviewMe.Web/Scripts/react-temp/src/assets/css/quiz.css
+++ b/InterviewMe.Web/Scripts/react-temp/src/assets/css/quiz.css
@@ -1,5 +1,32 @@
-.actions{
+.actions {
   width: 200px;
   height: 100px;
-  margin: auto;
-}
+  margin: auto; }
+
+.quiz .card::before, .quiz .card::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: opacity .38s ease-in-out, transform .35s ease-in-out;
+  content: '';
+  opacity: 0;
+  pointer-events: none; }
+
+.quiz .card::before {
+  transform: scale3d(0, 1, 1);
+  transform-origin: left top;
+  border-top: 1px solid #acacac;
+  border-bottom: 1px solid #acacac; }
+
+.quiz .card::after {
+  transform: scale3d(1, 0, 1);
+  transform-origin: right top;
+  border-right: 1px solid #4257b2;
+  border-left: 1px solid #4257b2;
+  border-top: 1px solid #4257b2; }
+
+.quiz .card:hover::before, .quiz .card:hover::after, .quiz .card:focus::before, .quiz .card:focus::after {
+  transform: scale3d(1, 1, 1);
+  opacity: 3; }
