--- a/InterviewMe.Web/Scripts/react-temp/src/assets/css/po.css
+++ b/InterviewMe.Web/Scripts/react-temp/src/assets/css/po.css
@@ -1,15 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display");
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro");
 .po { }
   .po .card {
     height: auto;
-    width: 250px;
-    margin: 30px auto;
+    width: 285px;
+    margin: 55px auto;
     background-color: white;
     box-shadow: 0px 5px 20px #555; }
-  .po .card a {
-    color: #333;
-    text-decoration: none; }
   .po .card:hover .card-image img {
     width: 110%;
     filter: grayscale(0); }
@@ -30,11 +26,6 @@
     text-align: center;
     padding: 15px 20px;
     box-sizing: border-box; }
-  .po .card-date {
-    font-family: 'Source Sans Pro', sans-serif; }
-  .po .card-title,
-  .po .card-exceprt {
-    font-family: 'Playfair Display', serif; }
   .po .card-date,
   .po .card-title {
     text-align: center;
@@ -45,13 +36,5 @@
   .po .card-exceprt,
   .po #case-title {
     color: #777; }
-  .po #case-title {
-    position: absolute;
-    font: 18px 'Microsoft YaHei';
-    top: 10px;
-    left: 0px;
-    right: 0px;
-    margin: auto;
-    display: block;
-    text-align: center;
-    text-decoration: none; }
+  .po .linked {
+    font-size: 14px; }
