--- a/InterviewMe.Web/Scripts/react-temp/src/assets/css/flashcards.scss
+++ b/InterviewMe.Web/Scripts/react-temp/src/assets/css/flashcards.scss
@@ -1,28 +1,28 @@
 .flashcards {
-    @import 'https://fonts.googleapis.com/css?family=Lily+Script+One';
+  
     body{
         background: #eee;
     }   
 
     .card {
-      position: absolute;
-      top: 50%;
+      position: absolute;     
+      top: 70%;
       left: 50%;
       width: 300px;
-      height: 300px;
+      height: 200px;
       margin: -150px;
       float: left;
-      perspective: 500px;
+      overflow-wrap: break-word;
+     
     }
     
     .content {
-      position: absolute;
+      position: absolute;     
       width: 100%;
-      height: 100%;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    
+      height: 100%;      
       transition: transform 1s;
       transform-style: preserve-3d;
+      overflow-wrap: break-word;
     }
     
     .card:hover .content {
@@ -36,17 +36,17 @@
       height: 100%;
       width: 100%;
       background: white;
-      line-height: 300px;
-      color: #03446A;
       text-align: center;
+      color: #03446A;    
       font-size: 14px;
       border-radius: 5px;
-      backface-visibility: hidden;
+      backface-visibility: hidden;     
     }
     
     .back {
       background: #03446A;
       color: white;
-      transform: rotateY( 180deg );
+      transform: rotateY( 180deg );    
     }
+
 }
