--- a/InterviewMe.Web/Scripts/react-temp/src/assets/css/takequiz.css
+++ b/InterviewMe.Web/Scripts/react-temp/src/assets/css/takequiz.css
@@ -23,6 +23,7 @@
     align-items: center;
     align-self: center;
     text-align: center;   
+    margin-bottom:-10px;
 }
 #transition-card{
         -webkit-transition: 0.5s ease-in-out;
@@ -33,7 +34,7 @@
 .tq-question{
     margin-left: 2vw;
     margin-right: 2vw;
-    margin-top: 10vh;
+    margin-top: 2vh;
     font-size: 1.5em;
     font-weight: 700;
     align-self: center;
@@ -46,9 +47,12 @@
     text-align: center;
     cursor: pointer;
     padding-top: 3em;
-    margin-bottom: -10em;
+    margin-bottom: -10px;
     transition-duration: 0.3s;
 }
 .tq-answer:hover {
     border-bottom: #3AAFA9 solid 2px;
+}
+.button-quit {
+    padding:2em;
 }
