--- a/InterviewMe.Web/Scripts/react-temp/src/assets/css/po.css
+++ b/InterviewMe.Web/Scripts/react-temp/src/assets/css/po.css
@@ -2,19 +2,20 @@
 .po { }
   .po .card {
     height: auto;
-    width: 285px;
+    width: 270px;
     margin: 55px auto;
     background-color: white;
     box-shadow: 0px 5px 20px #555; }
   .po .card:hover .card-image img {
-    width: 110%;
+    width: 90%;
     filter: grayscale(0); }
   .po .card-image {
-    height: 250px;
+    height: 200px;
     position: relative;
     overflow: hidden; }
   .po .card-image img {
-    width: 100%;
+    width: 80%;
+    height: 80%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -38,3 +39,5 @@
     color: #777; }
   .po .linked {
     font-size: 14px; }
+  .po .email {
+    font-size: 15px; }
