--- a/InterviewMe.Web/Scripts/react-temp/src/assets/css/po.scss
+++ b/InterviewMe.Web/Scripts/react-temp/src/assets/css/po.scss
@@ -3,22 +3,23 @@
 
     .card {
         height: auto;
-        width: 285px;
+        width: 270px;
         margin: 55px auto;
         background-color: white;
         box-shadow: 0px 5px 20px #555;
     }
     .card:hover .card-image img {
-        width: 110%;
+        width: 90%;
         filter: grayscale(0);
     }
     .card-image {
-        height: 250px;
+        height: 200px;
         position: relative;
         overflow: hidden;
     }
     .card-image img {
-        width: 100%;
+        width: 80%;
+        height: 80%;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -48,5 +49,8 @@
     
     .linked{
         font-size: 14px;
+    }
+    .email{
+        font-size: 15px;
     }
 }
