--- a/InterviewMe.Web/Scripts/react-temp/src/assets/css/takequiz.css
+++ b/InterviewMe.Web/Scripts/react-temp/src/assets/css/takequiz.css
@@ -20,6 +20,7 @@
     
 }
 .quiz-answers {
+    margin-top: 5px;
     align-items: center;
     align-self: center;
     text-align: center;   
@@ -41,17 +42,18 @@
     text-align: center;
 }
 .tq-answer {
-    display: inline-block;
+    display: inline-flex;
     font-size: 1.2em;
     align-self: center;
     text-align: center;
-    cursor: pointer;
-    padding-top: 3em;
+    margin-top: 3em;
     margin-bottom: -10px;
+    transition-timing-function: ease-in-out;
 }
 .tq-answer:hover {
+    display: inline-flex;
     border-bottom: #3AAFA9 solid 2px;
-    transition-timing-function: ease-in-out;
+    cursor: pointer;
 }
 .button-quit {
     padding:2em;
